@@ -1,3 +1,9 @@
+2008-04-09  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsconnection.c (Connection_printTestPage): Test for existence
+	of testprint.ps before performing operation, and look around for
+	it if necessary.
+
 2008-04-03  Tim Waugh  <twaugh@redhat.com>
 
 	* Makefile: Version 1.9.38.
